@@ -59,7 +59,7 @@ channels[10] = "S19.2E-53-1105-4016";
 channelsnames[11] = "RTL8 (S)";
 channels[11] = "S19.2E-53-1097-2035";
 channelsnames[12] = "Nickelodeon (S)";
-channels[12] = "S19.2E-0-211973-28679";
+channels[12] = "S19.2E-1-1078-28679";
 channelsnames[13] = "Comedy Central/Kindernet (S)";
 channels[13] = "S19.2E-53-1097-2036";
 channelsnames[14] = "Discovery (S)";
@@ -139,10 +139,10 @@ channelsnames[54] = "Disc.History (S)";
 channels[54] = "S28.2E-2-2009-6207";
 channelsnames[55] = "Disc.History+1 (S)";
 channels[55] = "S28.2E-2-2315-52435";
-channelsnames[56] = "Disc.RealTime (S)";
-channels[56] = "S28.2E-2-2009-6203";
-channelsnames[57] = "Disc.RT+1 (S)";
-channels[57] = "S28.2E-2-2315-52445";
+channelsnames[56] = "TLC (S)";
+channels[56] = "S28.2E-2-2009-6233";
+channelsnames[57] = "TLC+1 (S)";
+channels[57] = "S28.2E-2-2315-52446";
 channelsnames[58] = "Disc.Science (S)";
 channels[58] = "S28.2E-2-2009-6206";
 channelsnames[59] = "Disc.Sci+1 (S)";
@@ -159,12 +159,12 @@ channelsnames[64] = "Home&Health+ (S)";
 channels[64] = "S28.2E-2-2315-52450";
 channelsnames[65] = "Investigation (S)";
 channels[65] = "S28.2E-2-2315-52400";
-channelsnames[66] = "DMAX (S)";
-channels[66] = "S28.2E-2-2315-52415";
-channelsnames[67] = "DMAX+1 (S)";
-channels[67] = "S28.2E-2-2315-52420";
-channelsnames[68] = "DMAX+2 (S)";
-channels[68] = "S28.2E-2-2315-52425";
+channelsnames[66] = "Investigation+1 (S)";
+channels[66] = "S28.2E-2-2315-52426";
+channelsnames[67] = "DMAX (S)";
+channels[67] = "S28.2E-2-2315-52415";
+channelsnames[68] = "DMAX+1 (S)";
+channels[68] = "S28.2E-2-2315-52420";
 channelsnames[69] = "QUEST (S)";
 channels[69] = "S28.2E-2-2009-6211";
 channelsnames[70] = "QUEST+1 (S)";
@@ -193,7 +193,7 @@ channelsnames[81] = "History (S)";
 channels[81] = "S28.2E-2-2408-4653";
 channelsnames[82] = "History +1 hour (S)";
 channels[82] = "S28.2E-2-2408-5003";
-channelsnames[83] = "Military (S)";
+channelsnames[83] = "H2 (S)";
 channels[83] = "S28.2E-2-2604-54305";
 channelsnames[84] = "Nat Geo (S)";
 channels[84] = "S28.2E-2-2408-4805";
@@ -350,9 +350,9 @@ channelsnames[244] = "horror channel (S)";
 channels[244] = "S28.2E-2-2301-52105";
 channelsnames[245] = "horror ch+1 (S)";
 channels[245] = "S28.2E-2-2311-52002";
-channelsnames[246] = "men&movies (S)";
+channelsnames[246] = "more>movies (S)";
 channels[246] = "S28.2E-2-2602-54110";
-channelsnames[247] = "men&movs+1 (S)";
+channelsnames[247] = "m>movies+1 (S)";
 channels[247] = "S28.2E-2-2412-51120";
 channelsnames[248] = "movies4men (S)";
 channels[248] = "S28.2E-2-2412-51116";
@@ -415,25 +415,23 @@ channels[279] = "S28.2E-2-2313-53260";
 channelsnames[280] = "Food Netwrk+1 (S)";
 channels[280] = "S28.2E-2-2313-53270";
 channelsnames[281] = "wedding tv (S)";
-channels[281] = "S28.2E-2-2313-53280";
+channels[281] = "S28.2E-2-2402-55510";
 channelsnames[282] = "The Active Ch (S)";
-channels[282] = "S28.2E-2-2402-55510";
+channels[282] = "S28.2E-2-2614-55330";
 channelsnames[283] = "Fitness TV (S)";
 channels[283] = "S28.2E-2-2602-54165";
-channelsnames[284] = "Diva TV (S)";
-channels[284] = "S28.2E-2-2306-52530";
-channelsnames[285] = "BET:BlackEntTv (S)";
-channels[285] = "S28.2E-2-2313-53230";
-channelsnames[286] = "BET +1 (S)";
-channels[286] = "S28.2E-2-2311-52060";
-channelsnames[287] = "Information TV (S)";
-channels[287] = "S28.2E-2-2409-50880";
-channelsnames[288] = "Showcase (S)";
-channels[288] = "S28.2E-2-2302-52125";
-channelsnames[289] = "Showcase 2 (S)";
-channels[289] = "S28.2E-2-2601-54051";
-channelsnames[290] = "Horse & Country (S)";
-channels[290] = "S28.2E-2-2602-54140";
+channelsnames[284] = "BET:BlackEntTv (S)";
+channels[284] = "S28.2E-2-2411-51081";
+channelsnames[285] = "BET +1 (S)";
+channels[285] = "S28.2E-2-2411-51082";
+channelsnames[286] = "Information TV (S)";
+channels[286] = "S28.2E-2-2313-53230";
+channelsnames[287] = "Showcase (S)";
+channels[287] = "S28.2E-2-2302-52125";
+channelsnames[288] = "Showcase 2 (S)";
+channels[288] = "S28.2E-2-2313-53280";
+channelsnames[289] = "Horse & Country (S)";
+channels[289] = "S28.2E-2-2602-54140";
 
 channelsnames[300] = "CBBC Channel (S)";
 channels[300] = "S28.2E-2-2045-6317";
@@ -444,7 +442,7 @@ channels[302] = "S28.2E-2-2044-10071";
 channelsnames[303] = "KiKA (S)";
 channels[303] = "S19.2E-1-1079-28008";
 channelsnames[304] = "RIC (S)";
-channels[304] = "S19.2E-1-1003-13227";
+channels[304] = "S19.2E-1-1117-13019";
 channelsnames[305] = "NICK/COMEDY (S)";
 channels[305] = "S19.2E-1-1078-28680";
 channelsnames[306] = "jazeerachildren (S)";
@@ -479,7 +477,6 @@ channelsnames[320] = "Nick Jr+1 (S)";
 channels[320] = "S28.2E-2-2411-51090";
 channelsnames[321] = "Nick Jr. 2 (S)";
 channels[321] = "S28.2E-2-2411-51089";
-
 channelsnames[322] = "Nick Jr France (S)";
 channels[322] = "S19.2E-1-1078-28677";
 channelsnames[323] = "Nick Jr. (S)";
@@ -491,7 +488,7 @@ channels[326] = "S28.2E-2-2051-9004";
 channelsnames[327] = "Disney Junior+ (S)";
 channels[327] = "S28.2E-2-2051-9010";
 channelsnames[328] = "BabyTV (S)";
-channels[328] = "S28.2E-2-2409-51145";
+channels[328] = "S28.2E-2-2052-5564";
 channelsnames[329] = "Boomerang (S)";
 channels[329] = "S28.2E-2-2018-7102";
 channelsnames[330] = "Boomerang +1 (S)";
@@ -914,24 +911,6 @@ channelsnames[645] = "VH1 (S)";
 channels[645] = "S28.2E-2-2010-7002";
 channelsnames[646] = "VIVA (S)";
 channels[646] = "S28.2E-2-2010-7009";
-channelsnames[647] = "VH1 (S)";
-channels[647] = "S30.0W-54-37-2003";
-channelsnames[648] = "VH1 Classic (S)";
-channels[648] = "S30.0W-54-41-612";
-channelsnames[649] = "MTV Music (S)";
-channels[649] = "S30.0W-54-40-782";
-channelsnames[650] = "MTV Dance (S)";
-channels[650] = "S30.0W-54-40-783";
-channelsnames[651] = "MTV Portugal (S)";
-channels[651] = "S30.0W-54-40-504";
-channelsnames[652] = "MTV ESPAÑA (S)";
-channels[652] = "S30.0W-49-5-85";
-channelsnames[653] = "MTV Rocks (S)";
-channels[653] = "S30.0W-54-37-967";
-channelsnames[654] = "MTV ROCKS (S)";
-channels[654] = "S30.0W-54-37-2004";
-channelsnames[655] = "MTV ESPAÑA (S)";
-channels[655] = "S30.0W-49-5-98";
 channelsnames[656] = "VIVA AUT (S)";
 channels[656] = "S19.2E-133-7-60";
 channelsnames[657] = "MTV Live (S)";
@@ -946,8 +925,6 @@ channelsnames[661] = "MTV Music (S)";
 channels[661] = "S13.0E-64511-800-1428";
 channelsnames[662] = "MTV Dance (S)";
 channels[662] = "S13.0E-64511-800-1429";
-channelsnames[663] = "VH1 (S)";
-channels[663] = "S30.0W-54-37-785";
 channelsnames[700] = "NHK World (S)";
 channels[700] = "S13.0E-318-13100-7327";
 channelsnames[701] = "VTV4 (S)";
