@@ -23,7 +23,7 @@
 //
 //
 
-var Version = "0.19.1"
+var Version = "0.19.2"
 
 for (var x = 0;  x < 10; x++) { 
 	if (minChan[x]) {
@@ -1342,7 +1342,7 @@ function StreamInfo(si) {
 
 
 
-	if(SI[1]=="3" && ( SI[2]=="3205" || SI[2]=="3209" || SI[2]=="3210" || SI[2]=="3221" || ( SI[2]=="3219" && SI[3]!=="13135") )) {
+	if(SI[1]=="3" && ( SI[2]=="3205" || SI[2]=="3209" || SI[2]=="3210" || SI[2]=="3221" || SI[2]=="3219" )) {
 	//Canal Digitaal/ TV Vlaanderen use CZE channels on 23East
 	// Strangly set filter to cze but epg is in Dutch. (But not for JimJam)
 	is.setObject("cfg.locale.ui","cze",is.STORAGE_VOLATILE);
@@ -1378,10 +1378,23 @@ function StreamInfo(si) {
 		is.setObject("cfg.locale.ui","pol",is.STORAGE_VOLATILE);
 	}
 
-	if(SI[0]=="S19.2E" && (SI[2]=="1074") || (SI[2]=="1018") || (SI[2]=="1024") || (SI[2]=="1068") || (SI[2]=="1070") || (SI[2]=="1072") || (SI[2]=="1076") || (SI[2]=="1080") || (SI[2]=="1084") || (SI[2]=="1086") || (SI[2]=="1090") || (SI[2]=="1092") || (SI[2]=="1094") || (SI[2]=="1096") || (SI[2]=="1100") || (SI[2]=="1102") || (SI[2]=="1106") || (SI[2]=="1110") || (SI[2]=="1112") || (SI[2]=="1114") || (SI[2]=="1116") || (SI[2]=="1118") || (SI[2]=="1120")) {
+	if(SI[0]=="S19.2E" && ((SI[2]=="1074") || (SI[2]=="1018") || (SI[2]=="1024") || (SI[2]=="1068") || (SI[2]=="1070") || (SI[2]=="1072") || (SI[2]=="1076") || (SI[2]=="1080") || (SI[2]=="1084") || (SI[2]=="1086") || (SI[2]=="1090") || (SI[2]=="1092") || (SI[2]=="1094") || (SI[2]=="1096") || (SI[2]=="1100") || (SI[2]=="1102") || (SI[2]=="1106") || (SI[2]=="1110") || (SI[2]=="1112") || (SI[2]=="1114") || (SI[2]=="1116") || (SI[2]=="1118") || (SI[2]=="1120"))) {
 	//CanalSat S19.2
 		is.setObject("cfg.locale.ui","fra",is.STORAGE_VOLATILE);
 	}
+
+
+	// MTV transponder
+	if(SI[0]=="S19.2E" && SI[2]=="1078" && ( SI[3]=="28674" || SI[3]=="28675" || SI[3]=="28677")) {
+	//Nick JR France
+		is.setObject("cfg.locale.ui","fra",is.STORAGE_VOLATILE);
+	}
+
+	if(SI[0]=="S19.2E" && SI[2]=="1078" && SI[3]=="28679") {
+	//Nick NL
+		is.setObject("cfg.locale.ui","dut",is.STORAGE_VOLATILE);
+	}
+
 
 }
 
@@ -1597,6 +1610,11 @@ function onKeyMenu(keyCode) {
 		InitMenu(menu);
     break;
     case "Accept":
+	if (menu == 5) {
+		// Show EPG info Timer
+		ShowTimerInfo();
+		osdepginfo.style.opacity = 1 - osdepginfo.style.opacity;
+	}
     break;
     case "Red":
     	if (menu == 2) {
@@ -2159,6 +2177,12 @@ if (DelisOK) {
 } else if (mediaList.style.opacity != 0) { 
   switch(keyCode) {
     case "BrowserBack":
+	if (subgroup) { 	
+		mediaList.innerHTML = "<h1><center style='font-size:" + fsRec + ";color:white;'> Please WAIT </center></h1>";
+		setTimeout("getRecList(); showMediaList();",100)
+		subgroup = 0;
+		break;
+	}
 	if (osdepginfo.style.opacity == 1) { osdepginfo.style.opacity = 0; break; }
     case "TV":
 	UnloadMediaSettings();
@@ -2171,7 +2195,8 @@ if (DelisOK) {
 		{
 		        incMed(1);
 		}
-		while (!recTitl[currMed]);
+	//	while (!recTitl[currMed]);
+		while (!recList[currMed]);
 	   }	
 	showMediaList();
 	}
@@ -2183,7 +2208,8 @@ if (DelisOK) {
 		{
 		        decMed(1);
 		}
-		while (!recTitl[currMed]);
+	//	while (!recTitl[currMed]);
+		while (!recList[currMed]);
 	   }
 	showMediaList();
 	}
@@ -2194,7 +2220,8 @@ if (DelisOK) {
 	{
 	        incMed(1);
 	}
-	while (!recTitl[currMed]);
+	//	while (!recTitl[currMed]);
+		while (!recList[currMed]);
 	showMediaList();
 	}
         break;
@@ -2204,7 +2231,8 @@ if (DelisOK) {
 	{
 	        decMed(1);
 	}
-	while (!recTitl[currMed]);
+	//	while (!recTitl[currMed]);
+		while (!recList[currMed]);
 	showMediaList();
 	}
 	break;
@@ -2215,8 +2243,13 @@ if (DelisOK) {
 		osdepginfo.style.opacity = 1 - osdepginfo.style.opacity;
 	}
 	if (getRecOK == 1) {
-		mediaList.style.opacity = 0;
-		setTimeout("GetMarks(); getResume(); playRec(recLink[currMed]+ '?time=' + position);",100);
+		if (recGroup[currMed] !== 0 && subgroup == 0 && ShowSubDir) {
+			setTimeout("MakeRecList3(recGroup[currMed]); showMediaList();",100)
+			subgroup = 1;
+		} else {
+			mediaList.style.opacity = 0;
+			setTimeout("GetMarks(); getResume(); playRec(recLink[currMed]+ '?time=' + position);",100);
+		}
 	}
         break;
     case "Red":
@@ -2476,6 +2509,7 @@ if (DelisOK) {
 
 function getRecList() {
 	getVDRstatus();
+	MaxInGroup = 14;
 try {
    xmlhttp=new XMLHttpRequest();
    xmlhttp.open("GET",(recServ + recPath + "?" + new Date().getTime()),false);
@@ -2504,7 +2538,11 @@ try {
 	  recChan[i] = "Media File";
 	}
 	  }
+	if (recPath == "/recordings.xml" && ShowSubDir) {
+	MakeRecList2();
+	} else {
 	MakeRecList();
+	}
  	getRecOK = 1;
   } catch(e) {
     alert("Get Recordings problem: " + e);
@@ -2640,17 +2678,60 @@ function MakeRecList() {
 	}
 }
 
+function MakeRecList2() {
+   var x = "";
+   var xx = 0;
+   for (var i=0;i<recTitl.length;i++)
+	{
+	 if (recTitl[i][1]) { 
+					if (recTitl[i][0] != x) {
+						recList[i] = "\uE002 " + recTitl[i][0];
+						xx = xx + 1;
+					} else {
+						recList[i] = "" ; 
+					}
+					recGroup[i] = xx;
+				} else { 
+					recGroup[i] = 0;
+					recList[i] = "\uE003 " + recTitl[i];
+						if (rec_New[i] == "true" ) { recList[i] = "\uE010\uE003" + recList[i]; 
+							} else { recList[i] = "\uE003\uE003" + recList[i]; }
+				}
+	x = recTitl[i][0];
+	}
+}
+
+function MakeRecList3(GroupID) {
+   MaxInGroup = 0;
+   for (var i=0;i<recTitl.length;i++)
+	{
+		if (recGroup[i] == GroupID) {
+			if (rec_New[i] == "true" ) { recList[i] = "\uE010\uE003" + recTitl[i]; 
+			} else { recList[i] = "\uE003\uE003" + recTitl[i]; }
+			MaxInGroup = MaxInGroup + 1;
+		} else {
+			recList[i] = "" ; 
+		}
+	}
+}
+
+
+
+
 function showMediaList() {
 	if (osdepginfo.style.opacity == 1) {osdepginfo.style.opacity = 0;}
 	osdmedia.style.opacity = 0;
 	var liststyle = "";
+	listMed = currMed - 1;
+	if (nrMedia < 14) {var MaxMed = nrMedia; } else { var MaxMed = 14; }
+
 	if (getRecOK == 1) {
 	var htmlstring = "<h1><center style='font-size:" + fsRec + ";color:white;'> RECORDINGS (free " + (100 - perc_space) + "%, " + (free_space/1024).toFixed(0) + " GB) </center></h1><table border='0'><tr>";
+	if (MaxInGroup < 14) {var MaxMed = MaxInGroup - 1; }
 	} else {
 	var htmlstring = "<h1><center style='font-size:" + fsRec + ";color:white;'> EPG " + channelsnames[currChan] + " </center></h1><table border='0'><tr>";
 	}
-	listMed = currMed - 1;
-	if (nrMedia < 14) {var MaxMed = nrMedia; } else { var MaxMed = 14; }
+
 	for(var i=currMed; i<=currMed + MaxMed; i++) {
 		if (listMed<0) {
 			listMed=nrMedia;
